Recs: fix overflow gradient

--- a/frontend/css/recommendation-page.less
+++ b/frontend/css/recommendation-page.less
@@ -11,7 +11,7 @@
     content: "";
     width: 4em;
     background: linear-gradient(270deg, #fff, transparent);
-    position: sticky;
+    position:  absolute;
     pointer-events: none;
     right: -1px;
     bottom: 0;
